src/objects/Owner_Assignment_Map__c.object
<CustomObject>
    <fields>
        <fullName>Default_RM_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default RM Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSM_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TSM Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unassigned_State_Fallback_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unassigned State Fallback Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Owner_Assignment_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Owner Assignment Map</label>
    <nameField>
        <label>Owner Assignment Map</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owner Assignment Maps</pluralLabel>
    <recordTypes>
        <fullName>Default_RM</fullName>
        <active>true</active>
        <description>Unassigned RM Map fallback map. There can only be one.</description>
        <label>Default RM</label>
    </recordTypes>
    <recordTypes>
        <fullName>RM</fullName>
        <active>true</active>
        <description>Relationship Manager map.</description>
        <label>RM</label>
    </recordTypes>
    <recordTypes>
        <fullName>TSM</fullName>
        <active>true</active>
        <description>Territory Sales Manager map. There can only be one.</description>
        <label>TSM</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>